# rust-vst-plugin

./: Cargo.toml  README.md
gain_plugin/: Cargo.toml
gain_plugin/src/: main.rs
plugin/: Cargo.toml
src/: editor.rs  lib.rs
xtask/: Cargo.toml
