[package]
name = "gain_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Jan Wilczek"]
description = "A simple GUI gain plugin"

[lib]
# cdylib is for VST3 (?)
# lib is for standalone
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }

